--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/f88eed76ad.js" crossorigin="anonymous"></script>
-    <title>Starwars Explorer</title>
+    <title>StarWars Explorer</title>
   </head>
   <body class="bg-[url('/background.svg')]">
     <div id="root"></div>
